# KernelLab

./: .gitignore  CMakeLists.txt  README.md  test.py
.cache/clangd/index/: API_trace.cpp.B49D6562E1151EED.idx  API_trace.h.94CFE9A9461621E3.idx  Llama2.cpp.DE68921BF6522FD6.idx  add.cpp.D948F754F428D07C.idx  add.h.D87C29E2A05F7D68.idx  add_kernel.cpp.BCE6108CC662262C.idx  add_kernel.cu.14968F37C88C02CF.idx  add_kernel.cuh.86F44264A2C367D5.idx  add_kernel.h.C711A73A8BE79A98.idx  alloc.cpp.E19EBFB1E229F9CB.idx  alloc.h.6549A48CCE26B213.idx  alloc_cpu.cpp.1B6D2413D8CF5EFB.idx  alloc_cu.cpp.90672229DBD4DBCE.idx  argmax_kernel.cu.4187ED0CF59A9A13.idx  argmax_kernel.cuh.E92EF1C3E122F124.idx  argmax_sampler.cpp.5F27A24F588C1FAF.idx  argmax_sampler.h.AC2B9292479FEA72.idx  base.cpp.2856C5B96BA90620.idx  base.h.D6C471E394F27BF9.idx  buffer.cpp.72B0ADE0FE2644D5.idx  buffer.h.989A1BABD04E51A2.idx  config.h.66403BF6B114E908.idx  cuda_config.h.35D10C22BF1F9A3A.idx  embedding.cpp.6AD4F8C4C079F43F.idx  embedding.h.98C6FFDC48197D2E.idx  embedding_kernel.cpp.AA5A038C5FA92CB7.idx  embedding_kernel.cu.64405C1ED45838C4.idx  embedding_kernel.cuh.3BCB9A855B83A9B2.idx  embedding_kernel.h.C29F3BDFF0626777.idx  encode.cpp.4D21826A8808CCB2.idx  encode.h.73F6CCE3EE6E70C8.idx  histogram.cpp.5808AC4622AEA7F2.idx  histogram.h.35C755EBC7FAB144.idx  histogram_kernel.cpp.991E0A1C83DD6CE7.idx  histogram_kernel.cu.AD4891A137A41B56.idx  histogram_kernel.cuh.2F45CF2ECC654823.idx  histogram_kernel.h.A4C96E5EE0A825D5.idx  index_add.cpp.5D3A14DF43042D17.idx  index_add.h.7B9CD3E0E601A846.idx  index_add_kernel.cpp.43B557BDBB796E85.idx  (+88 more)
Engine/include/base/: API_trace.h  alloc.h  base.h  buffer.h  cuda_config.h  para.h  tick.h
Engine/include/model/: config.h  llama3.h  model.h  raw_model_data.h
Engine/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  reduce.h  rmsnorm.h  rope.h  scatter.h  swiglu.h
Engine/include/sampler/: argmax_sampler.h  sampler.h
Engine/include/tensor/: tensor.h
Engine/source/base/: API_trace.cpp  alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp
Engine/source/model/: llama3.cpp  model.cpp  raw_model_data.cpp
Engine/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  scatter.cpp  swiglu.cpp
Engine/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
Engine/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  embedding_kernel.cpp  embedding_kernel.h  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  reduce_kernel.cpp  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.h  scatter_kernel.cpp  scatter_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
Engine/source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  embedding_kernel.cu  embedding_kernel.cuh  index_add_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  reduce_kernel.cu  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  scatter_kernel.cu  scatter_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
Engine/source/sampler/: argmax_sampler.cpp
Engine/source/tensor/: tensor.cpp
KernelLab/include/base/: API_trace.h  alloc.h  base.h  buffer.h  para.h  tick.h
KernelLab/include/model/: config.h  llama2.h  model.h
KernelLab/include/op/: add.h  embedding.h  encode.h  histogram.h  index_add.h  layer.h  matmul.h  mha.h  reduce.h  rmsnorm.h  rope.h  scatter.h  softmax.h  swiglu.h
KernelLab/include/sampler/: argmax_sampler.h  sampler.h
KernelLab/include/tensor/: tensor.h
KernelLab/source/base/: alloc_cpu.cpp  alloc_cu.cpp  base.cpp
KernelLab/source/model/: llama2.cpp
KernelLab/source/op/: add.cpp  embedding.cpp  histogram.cpp  layer.cpp  mha.cpp  reduce.cpp  rmsnorm.cpp
KernelLab/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
KernelLab/source/op/kernels/cpu/: add_kernel.h  embedding_kernel.cpp  histogram_kernel.cpp  histogram_kernel.h  index_add_kernel.cpp  matmul_kernel.cpp  reduce_kernel.h  rope_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  scatter_kernel.cpp  (+2 more)
KernelLab/source/tensor/: tensor.cpp
LLM/: CMakeLists.txt
cuda_tutorial/: CMakeLists.txt
cuda_tutorial/NewFeature/: Ampere_PTX_ISA_showcase.cu  AsyncGlobalToShared_demo.cu  CMakeLists.txt  TensorCore.cu  TensorCore_explicit_wmma.cu  ThreadBlockCluster_demo.cu
cuda_tutorial/course1/: CMakeLists.txt  hello_world.cu
cuda_tutorial/course13/: CMakeLists.txt  DLB.md  prefix_sum_v0.cu  prefix_sum_v1.cu  prefix_sum_v2.cu  prefix_sum_v3.cu  prefix_sum_v4.cu  prefix_sum_v4_1.cu  prefix_sum_v4_2.cu  prefix_sum_v4_3.cu  prefix_sum_v4_4.cu  prefix_sum_v4_5.cu  prefix_sum_v4_6.cu  prefix_sum_v5.cu
cuda_tutorial/course2/: CMakeLists.txt  vec_add.cu
cuda_tutorial/course3/: CMakeLists.txt  shuffle_down.cu  shuffle_sync.cu  shuffle_up.cu  softmax.cu
cuda_tutorial/course4/: CMakeLists.txt  reduce.cu
cuda_tutorial/course5/: CMakeLists.txt  matmul_v0.cu  matmul_v1.cu  matmul_v2.cu  matmul_v3.cu  matmul_v4.cu  matmul_v5.cu  matmul_v6.cu  sgemm_benchmark_v0.csv  sgemm_benchmark_v1.csv  sgemm_benchmark_v2.csv  sgemm_benchmark_v3.csv  sgemm_benchmark_v4.csv  sgemm_benchmark_v5.csv  sgemm_benchmark_v6.csv
cuda_tutorial/course6/: CMakeLists.txt  histogram.cu  histogram_benchmark.csv  histogram_v1.cu  histogram_v1_benchmark.csv  histogram_v2.cu  histogram_v2_benchmark.csv  histogram_v3.cu  histogram_v3_benchmark.csv  histogram_v5.cu  histogram_v5_benchmark.csv
cuda_tutorial/cp_async_exp/: Exp1  Exp1.cu  Exp2  Exp2.cu  Exp3  Exp3.cu  Exp4  Exp4.cu
demo/: main.cpp
ncu_log/: log.ncu-rep
ncu_prof/: ncu_add  ncu_add.cu  ncu_add.ncu-rep  ncu_note.txt  笔记.txt
test/: CMakeLists.txt  pref_add_kernel.ncu-rep  pref_add_kernel_tuner.ncu-rep  test_main.cpp
test/test_op/: test_cu_add.cpp  test_cu_embedding.cpp  test_cu_histogram.cpp  test_cu_index_add.cpp  test_cu_matmul.cpp  test_cu_reduce.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scatter.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
(+38 files in other folders)
