add_executable(prefix_sum_v0 prefix_sum_v0.cu)
add_executable(prefix_sum_v1 prefix_sum_v1.cu)
add_executable(prefix_sum_v2 prefix_sum_v2.cu)
add_executable(prefix_sum_v3 prefix_sum_v3.cu)
add_executable(prefix_sum_v4 prefix_sum_v4.cu)
add_executable(prefix_sum_v5 prefix_sum_v5.cu)
add_executable(prefix_sum_v4_1 prefix_sum_v4_1.cu)
add_executable(prefix_sum_v4_2 prefix_sum_v4_2.cu)
add_executable(prefix_sum_v4_3 prefix_sum_v4_3.cu)
add_executable(prefix_sum_v4_4 prefix_sum_v4_4.cu)
add_executable(prefix_sum_v4_5 prefix_sum_v4_5.cu)
add_executable(prefix_sum_v4_6 prefix_sum_v4_6.cu)

target_link_libraries(prefix_sum_v0 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v1 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v2 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v3 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v5 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_1 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_2 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_3 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_4 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_5 PRIVATE ${CUDA_LIBRARIES})
target_link_libraries(prefix_sum_v4_6 PRIVATE ${CUDA_LIBRARIES})

