add_executable(matmul_v0 matmul_v0.cu)
add_executable(matmul_v1 matmul_v1.cu)
add_executable(matmul_v2 matmul_v2.cu)
add_executable(matmul_v3 matmul_v3.cu)
add_executable(matmul_v4 matmul_v4.cu)
add_executable(matmul_v5 matmul_v5.cu)
add_executable(matmul_v6 matmul_v6.cu)


target_link_libraries(matmul_v0 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v1 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v2 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v3 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v4 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v5 PRIVATE ${CUDA_LIBRARIES} cublas)
target_link_libraries(matmul_v6 PRIVATE ${CUDA_LIBRARIES} cublas)
